--- a/index.html
+++ b/index.html
@@ -1,47 +1,11 @@
-<h1>Яблочная пастила</h1>
-
-<h2>Ингредиенты:</h2>
+<h1>Сайты, которые я чаща всего посещаю</h1>
 
 <p>
- <ul>
-   <li>Яблоко (сладкое) - 1 шт. (200 г)</li>
-   <li>Молоко (нежирное) - 100 мл</li>
-   <li>Яйцо (куриное) - 1 шт.</li>
-   <li>Желатин - 10 г</li>
-   <li>Сахарозаменитель по вкусу</li>
- </ul>
-</p>
-
-<h2>На 100 г блюда:</h2>
-
-<p>
- <ul>
-   <li>Белки 4,8</li>
-   <li>Жиры 0,2</li>
-   <li>Угловоды 7,9</li>
-   <li>Порции: 2-3</li>
- </ul>
-</p>
-
-<p>
- <ol>
-   <li>Яблоко разрезать на 4 части, удалить сердцевину, запечь в духовке или микроволновой печи, пока яблоко не станет мягким.</li>
-   <li>Дать яблоку немного остыть, размять вилкой и снять кожуру, она в блюде не используется.</li>
-   <li>Вылить в сотейник молоко и поставить на средний огонь, добавить сахарозаменитель, довести до кипения и, постоянно помешивая, дать покипеть в течение 3-х минут, затем снять с огня и немного остудить.</li>
-   <li>К остывшему молоку добавить желатин, хорошо перемешать и дать постоять 20 минут, затем поставить на слабый огонь и, постоянно помешивая, довести до растворения желатина в молоке, жидкость должна получиться однородной и слегка густоватой.</li>
-   <li>Отделить яичный белок от желтка и отправить белок в глубокую посуду, пробить блендером, затем добавить размятое яблоко и с помощью блендера приготовить однородное пюре.</li>
-   <li>Добавить молоко с желатином к яично-яблочному пюре и с помощью блендера приготовить однородную массу.</li>
-   <li>Получившуюся массу перелить в плоскую форму или небольшие силиконовые формочки.</li>
-   <li>Отправить в холодильник до полного застывания пастилы.</li>
-   <li>Застывшую пастилу нарезать полосками, квадратами или ромбами.</li>
- </ol>
-</p>
-
-<h4>Примечание:</h4>
-
-<p>
- <ul>
-   <li>Желатин можно заменить агар-агаром или пектином.</li>
-   <li>В пастилу можно добавить небольшое количество ягодного пюре из клубники, малины, черники или голубики.</li>
- </ul>
+<ol>
+  <li><a href="https://www.youtube.com/watch?v=IrjKiH-wKJg&list=RDGMEMWO-g6DgCWEqKlDtKbJA1GwVMzddBQRnsqDA&index=13", target="_blank">youtube music</a></li>
+  <li><a href="https://metanit.com/sharp/aspnet6/6.6.php", target="_blank">metanit</a></li>
+  <li><a href="https://soundcloud.com/tags/пк", target="_blank">soundcloud</a></li>
+  <li><a href="https://github.com/Fantom469", target="_blank">github</a></li>
+  <li><a href="https://chatgpt.com", target="_blank">chatgpt</a></li>
+</ol>
 </p>
