add_servises_page

--- a/about.html
+++ b/about.html
@@ -27,13 +27,13 @@
 <p>
         <label>Так же, ознакомтесь с нашими работами:</label><br /><br />
         <label>Внешний и внутренний стайлинг</label><br />
-        <img width="450" src="jdm.jpg"><br />
+        <img width="450" src="Photos/jdm.jpg"><br />
         <label>Доработка салона и мультимедиа</label><br />
-        <img width="450" src="interior.jpg"><br />
+        <img width="450" src="Photos/interior.jpg"><br />
         <label>Tехнический тюнинг и улучшение динамики</label><br />
-        <img width="450" src="vtec.jpg"><br />
+        <img width="450" src="Photos/vtec.jpg"><br />
         <label>Индивидуальные проекты «под ключ».</label><br />
-        <img width="450" src="brz.webp">
+        <img width="450" src="Photos/brz.webp">
         <p>
                 Мы работаем только с проверенными материалами и современным оборудованием, уделяя внимание каждой детали. Для нас важно, 
                 чтобы ваш автомобиль не только выглядел эффектно, 
