--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </p>
 
       <p>
-    <img width="500" src="images.jpg">
+    <img width="500" src="./Photos/images.jpg">
     </p>
         
 </body>
