add_contacts_page

--- a/contacts.html
+++ b/contacts.html
@@ -16,5 +16,13 @@
       </ul>
     </p>
     <hr />
+
+    <h2>Контакты</h2>
+    <p>
+        Почта для заказов и косультаций:
+    </p>
+    <address>
+        Email: <a href="Chinazes perfomance@example.com">Chinazes perfomance.ua</a>
+    </address>
 </body>
 </html>
