Add_some_style_on_page

--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>О нас</title>
 </head>
 <body>
@@ -10,35 +11,36 @@
     <label>Так же советуем посетить: </label>
 
     <ul>
-      <li><a href="./index.html">Главная</a></li>
-      <li><a href="./services.html">Наши услуги</a></li>
-      <li><a href="./contacts.html">Наши контакты</a></li>
+      <li id="item"><a href="./index.html">Главная</a></li>
+      <li id="item"><a href="./services.html">Наши услуги</a></li>
+      <li id="item"><a href="./contacts.html">Наши контакты</a></li>
       </ul>
     </p>
     <hr />
 
-    <p>
-        <h2>О нас</h2><br />
+
+        <h2 class="head_style">О нас</h2><br />
+        <p class="text_style">
 Тюнинг-ателье «Чиназес» — это команда профессионалов, о
 бъединённых страстью к автомобилям и желанием делать их уникальными. 
 Мы превращаем стандартные машины в яркие и мощные проекты, 
 которые подчеркивают характер владельца.
-        </p>
+    </p>    
 <p>
         <label>Так же, ознакомтесь с нашими работами:</label><br /><br />
         <label>Внешний и внутренний стайлинг</label><br />
-        <img width="450" src="Photos/jdm.jpg"><br />
+        <img  src="Photos/jdm.jpg"><br />
         <label>Доработка салона и мультимедиа</label><br />
-        <img width="450" src="Photos/interior.jpg"><br />
+        <img  src="Photos/interior.jpg"><br />
         <label>Tехнический тюнинг и улучшение динамики</label><br />
-        <img width="450" src="Photos/vtec.jpg"><br />
+        <img src="Photos/vtec.jpg"><br />
         <label>Индивидуальные проекты «под ключ».</label><br />
-        <img width="450" src="Photos/brz.webp">
-        <p>
+        <img src="Photos/brz.webp">
+        <p class="text_style">
                 Мы работаем только с проверенными материалами и современным оборудованием, уделяя внимание каждой детали. Для нас важно, 
                 чтобы ваш автомобиль не только выглядел эффектно, 
                 но и оставался надёжным и комфортным.
-               <h3> <br/ >«Чиназес» — тюнинг, который выделяет вас на дороге.</h3>
+               <h3 class="head_style"> <br/ >«Чиназес» — тюнинг, который выделяет вас на дороге.</h3>
                 </p>
 
 </p>
